--- a/html/index.html
+++ b/html/index.html
@@ -156,7 +156,7 @@ jQuery(window).on('load',  function() {
 <div id="tz-logo" class="col-lg-2 col-md-2 col-sm-12 col-xs-12 ">
           <div class="logo">
          <a href="index.html#" id="tzlogo">
-            <img src="logo.png" alt="Everline - Wedding Joomla Template - " />
+            <img src="logo.png" alt="My Wedding Day - " />
          </a>
      </div>
      </div>
@@ -408,27 +408,22 @@ jQuery(window).on('load',  function() {
                         {
                 title:"Marry You",
                 artist:"Bruno Mars",
-                                mp3:"http://7xl8mc.com1.z0.glb.clouddn.com/marryme.mp3",
+                                mp3:"http://7fvgm1.com1.z0.glb.clouddn.com/marryme.mp3",
                                             },
                         {
                 title:"I Want Give Up",
                 artist:"Give Up",
-                                mp3:"resources/I_Want_Crazy.mp3"
+                                mp3:"http://7fvgm1.com1.z0.glb.clouddn.com/I_want_crazy.mp3"
                                             },
                         {
-                title:"Alone Cover Version",
+                title:"Jiehunjinxingqu",
                 artist:"Mikuni Shimokawa",
-                                mp3:"resources/Alone_Cover_Version.mp3"
-                                            },
-                        {
-                title:"I Want Crazy",
-                artist:"Hunter Hayes",
-                                mp3:"resources/I_Won_t_Give_Up.mp3"
+                                mp3:"http://7fvgm1.com1.z0.glb.clouddn.com/jiehunjinxingqu.mp3"
                                             },
                         {
                 title:"A Thousand Years",
                 artist:"Christina Perri",
-                                mp3:"resources/A_Thousand_Years.mp3"
+                                mp3:"http://7fvgm1.com1.z0.glb.clouddn.com/A_Thousand_Years.mp3"
                                             }
             
         ], {
