--- a/html/index.html
+++ b/html/index.html
@@ -211,9 +211,43 @@ jQuery(window).on('load',  function() {
         <!-- MAIN IMAGE -->
         <img src="http://7fvgm1.com1.z0.glb.clouddn.com/home312.jpg"  alt="home312"  data-bgposition="center top" data-kenburns="on" data-duration="10000" data-ease="Power0.easeIn" data-bgfit="100" data-bgfitend="110" data-bgpositionend="center center">
         <!-- LAYERS -->
-
-        
     </li>
+
+    <!-- SLIDE  5-->
+    <li data-transition="fade" data-slotamount="7" data-masterspeed="600"  data-saveperformance="off" >
+        <!-- MAIN IMAGE -->
+        <img src="http://7fvgm1.com1.z0.glb.clouddn.com/home001.jpg"  alt="home001"  data-bgposition="center top" data-kenburns="on" data-duration="10000" data-ease="Power0.easeIn" data-bgfit="100" data-bgfitend="110" data-bgpositionend="center center">
+        <!-- LAYERS -->
+    </li>
+
+    <!-- SLIDE  6-->
+    <li data-transition="fade" data-slotamount="7" data-masterspeed="600"  data-saveperformance="off" >
+        <!-- MAIN IMAGE -->
+        <img src="http://7fvgm1.com1.z0.glb.clouddn.com/home002.jpg"  alt="home002"  data-bgposition="center top" data-kenburns="on" data-duration="10000" data-ease="Power0.easeIn" data-bgfit="100" data-bgfitend="110" data-bgpositionend="center center">
+        <!-- LAYERS -->
+    </li>
+
+    <!-- SLIDE  7-->
+    <li data-transition="fade" data-slotamount="7" data-masterspeed="600"  data-saveperformance="off" >
+        <!-- MAIN IMAGE -->
+        <img src="http://7fvgm1.com1.z0.glb.clouddn.com/home003.jpg"  alt="home003"  data-bgposition="center top" data-kenburns="on" data-duration="10000" data-ease="Power0.easeIn" data-bgfit="100" data-bgfitend="110" data-bgpositionend="center center">
+        <!-- LAYERS -->
+    </li>
+
+    <!-- SLIDE  8-->
+    <li data-transition="fade" data-slotamount="7" data-masterspeed="600"  data-saveperformance="off" >
+        <!-- MAIN IMAGE -->
+        <img src="http://7fvgm1.com1.z0.glb.clouddn.com/home004.jpg"  alt="home004"  data-bgposition="center top" data-kenburns="on" data-duration="10000" data-ease="Power0.easeIn" data-bgfit="100" data-bgfitend="110" data-bgpositionend="center center">
+        <!-- LAYERS -->
+    </li>
+
+    <!-- SLIDE  9-->
+    <li data-transition="fade" data-slotamount="7" data-masterspeed="600"  data-saveperformance="off" >
+        <!-- MAIN IMAGE -->
+        <img src="http://7fvgm1.com1.z0.glb.clouddn.com/home005.jpg"  alt="home005"  data-bgposition="center top" data-kenburns="on" data-duration="10000" data-ease="Power0.easeIn" data-bgfit="100" data-bgfitend="110" data-bgpositionend="center center">
+        <!-- LAYERS -->
+    </li>
+
 </ul>
 <div class="tp-bannertimer"></div>  </div>
             
